[tool.poetry]
name = "bluetti-monitor"
version = "0.1.0"
description = ""
authors = ["Jan Rous <rousik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.14"
bleak = "^0.22.3"
asyncio = "^3.4.3"
hexdump = "^3.3"
crcmod = "^1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
